local services alignment fixed

--- a/xpressgate/src/components/SocietyModule/Plumber.css
+++ b/xpressgate/src/components/SocietyModule/Plumber.css
@@ -11,7 +11,7 @@ html {
 
 .sidebar_classes h5 {
   font-size: 16px;
-  
+  color:#757575
 }
 
 .selected{
@@ -78,6 +78,12 @@ html {
   
 }
 
+.lnoticelist{
+  text-align: left;
+    margin-left: 13%;
+    margin-top: 5%;
+    
+}
 .P_sideimage img {
   display: flex;
   margin-top: 46%;
